add penguin image to result and fade in results
co-authored-by:  Teresa Rosinski <trosinski89@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
 #result {
   display:none;
 }
+
+body {
+  background-color: grey;
+  display: flex;
+  text-align: left;
+  justify-content: center;
+}
+
+#form {
+  width: 150px;
+}
+
+h1 {
+  color: palegoldenrod;
+}
